# ai-sbom

./: CHANGELOG.md  README.md  pyproject.toml
src/ai_sbom/: __init__.py  cli.py
