[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sbom"
version = "0.1.2"
description = "AI-SBOM — generic alias for tibet-ai-sbom. BSI/G7 SBOM-for-AI implementation with cluster codes (AISBOM-MD/SLP/MOD/DSE/INF/SEC/KPI)."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.nl" },
    { name = "Root AI (Claude)", email = "root_ai@humotica.nl" },
]
keywords = [
    "ai-sbom",
    "sbom-for-ai",
    "bsi",
    "g7",
    "ai-bom",
    "cyclonedx",
    "spdx",
    "ai-compliance",
    "tibet",
    "cbom",
    "supply-chain",
    "agentic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "tibet-ai-sbom>=0.2.0,<0.3",
]

[project.scripts]
ai-sbom = "ai_sbom.cli:main"

[project.urls]
Homepage = "https://humotica.com/ai-sbom"
Repository = "https://github.com/jaspertvdm/tibet-ai-sbom"
"Upstream Package" = "https://pypi.org/project/tibet-ai-sbom/"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sbom"]
